Fixed order guidelines in guidelines page - image alignment

--- a/html/web/themes/custom/comunicaitalia/src/scss/modules/views/_m-view-lineeguida.scss
+++ b/html/web/themes/custom/comunicaitalia/src/scss/modules/views/_m-view-lineeguida.scss
@@ -16,7 +16,8 @@
       display: flex;
       flex-direction: column;
       padding: 1.5em;
-      &:nth-child(1) {
+      /* MARKETING */
+      &:nth-child(3) {
         @include breakpoint($normal - 1) {
           flex: 1 0 0;
           order: 1;
@@ -43,7 +44,8 @@
           }
         }
       }
-      &:nth-child(2) {
+      /* COMUNICAZIONE */
+      &:nth-child(1) {
         @include breakpoint($normal - 1) {
           flex: 1 0 0;
           order: 3;
@@ -60,7 +62,8 @@
           }
         }
       }
-      &:nth-child(3) {
+      /* STORYTELLING */
+      &:nth-child(2) {
         @include breakpoint($normal - 1) {
           order: 4;
           width: 100%;
@@ -127,7 +130,7 @@
       }
       .views-field-field-call-to-action-pagina {
         display: flex;
-        margin-top: auto;
+        // margin-top: auto;
         .field-content {
           a {
             background-color: $color-blue-lightest;
